# recipe-generator

./: .gitignore  README.md  app.py  auth_service.py  build.sh  config.ini  create-aws-infra.sh  lambda_handler.py  pyproject.toml  recipe_service.py  requirements.txt
.github/workflows/: deploy.yml
frontend/: home.html  login.html  package-lock.json  register.html  result.html
frontend/src/: main-login.jsx  main-register.jsx  main-result.jsx
frontend/src/components/: Home.jsx  Login.jsx  Register.jsx  Result.jsx
infrastructure/: DEPLOYMENT.md  app.py  cdk.json  deployment.properties
infrastructure/infrastructure/: infrastructure_stack.py
infrastructure/stacks/: recipe_generator_stack.py  recipe_genie_stack.py
infrastructure/tests/unit/: test_infrastructure_stack.py
instance/: auth.db
lib/: read_secret.py
static/css/: style.css  styles.css
static/js/: main.js  theme.js
static/js/components/: Home.js  Login.js  Register.js  Result.js
static/src/: app.jsx  components.jsx  index.css  main-home.jsx  main-login.jsx  main-register.jsx  main-result.jsx
static/src/components/: Home.jsx  Login.jsx  Register.jsx  Result.jsx
templates/: base.html  forgot_password.html  index.html  login.html  register.html  result.html
tests/: test_auth_service.py  test_recipe_service.py
