[project]
name = "recipe_generator"
version = "0.1.0"
description = "Shiny recipe generator using Flask and Google Gemini"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "Flask>=3.0.0",
  "python-dotenv>=1.0.0",
  "google-generativeai>=0.7.2",
  "pytest",
  "protobuf~=3.19.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.uv]
dev-dependencies = [
  "black>=24.4.2",
  "ruff>=0.5.4",
  "pytest"
]

